overlays/uksouth-dev/olympus/api-reflector/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-reflector-custom-headers
spec:
  headers:
    customRequestHeaders:
      Host: reflector.${cluster_name}.${cluster_location}.bink.sh
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: reflector.${cluster_name}.${cluster_location}.bink.sh
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`reflector.${cluster_name}.${cluster_location}.bink.sh`)
      services:
        - kind: Service
          name: api-reflector
          port: 80
      middlewares:
        - name: api-reflector-custom-headers
